# world0

./: .gitignore  AGENTS.md  CHANGELOG.md  DCTMTemporalDynamics.md  DesignPhilosophy.md  README.md  TODO.md  models.example.json  pyproject.toml  start_world0.sh
docs/: extraction-model-prompt-eval.md  extraction-optimization-priorities.md  related-work-analysis.md  relation-probability-redesign.md  world-network-entropy-design.md  world0-color-field-dynamics.md  world0-paper.md  world0-usage.md
scripts/: eval_extraction_matrix.py
src/world0/: __init__.py  world.py
src/world0/agents/: __init__.py  __main__.py  cli.py  external.py  failure.py  gui.py  loop.py  pkm.py  provider.py  research.py  session.py  skill.py  state.py  web.py  web_main.py
src/world0/communities/: __init__.py  manager.py
src/world0/concepts/: __init__.py  _consolidation.py  _identity_ops.py  _indexes.py  _manager.py  api.py  manager.py
src/world0/core/: __init__.py  events.py  interfaces.py  test_doubles.py
src/world0/dynamics/: __init__.py  activation.py  coefficients.py  color_diffusion.py  community.py  decay.py  hebbian.py  lifecycle.py
src/world0/extraction/: __init__.py  extractor.py
src/world0/llm/: __init__.py  anthropic.py  azure_openai.py  base.py  openai.py
src/world0/metrics/: __init__.py  entropy.py
src/world0/models/: __init__.py  config.py
src/world0/projection/: __init__.py  (+1 more)
tests/: _cognitive_benchmark.py  _memory_dialogue_baseline.py  test_agent_loop.py  test_benchmark.py  test_benchmark_comprehensive.py  test_benchmark_e2e.py  test_cognitive_benchmark.py  test_color_field_deep.py  test_color_field_dynamics.py  test_decay.py  test_domain_color_diffusion.py  test_external_agent_deep.py  test_extraction.py  test_extraction_deep.py  test_extraction_quality_llm.py  test_hebbian.py  test_ingest_result_deep.py  test_inhibition_and_beta.py  test_integration.py  test_lifecycle.py  test_llm_providers.py  test_long_dialogue_cognitive_comparison.py  test_mcp.py  test_model_config.py  test_network_entropy.py  test_network_entropy_deep.py  test_persistence.py  test_perspective.py  test_pkm_agent.py  test_projection.py  test_prompts.py  test_provider.py  test_relation_axes.py  test_relation_axes_deep.py  test_relation_probability.py  test_research.py  test_session.py  test_signature_identity.py  test_skill.py  test_source_library.py  (+8 more)
(+45 files in other folders)
