[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world0"
version = "0.2.0"
description = "A cognitive concept-world system for LLM Agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gui = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pywebview>=4.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pywebview>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "openai>=1.0",
    "anthropic>=0.30",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
]

[project.scripts]
pkm = "world0.agents.cli:main"
pkm-gui = "world0.agents.gui:main"
pkm-web = "world0.agents.web_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
